force-app/main/default/objects/Defect__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <inlineHelpText>As a ...</inlineHelpText>
    <label>Actor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Sales Ops</fullName>
            </value>
            <value>
                <fullName>Admin Lite</fullName>
            </value>
            <value>
                <fullName>System Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>