force-app/main/default/objects/Defect__c/fields/Actual_Fix_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Fix_Date__c</fullName>
    <label>Actual Fix Date</label>
    <type>DateTime</type>
</CustomField>