force-app/main/default/objects/Defect__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
                <color>#0B6FCE</color>
                <label>Analytics</label>
            </value>
            <value>
                <fullName>Configuration</fullName>
                <color>#78C953</color>
                <label>Configuration</label>
            </value>
            <value>
                <fullName>Data</fullName>
                <color>#E27001</color>
                <label>Data</label>
            </value>
            <value>
                <fullName>Salesforce1</fullName>
                <color>#A845DC</color>
                <label>Salesforce1</label>
            </value>
            <value>
                <fullName>User Security</fullName>
                <color>#F3D904</color>
                <label>User Security</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#A53711</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>