force-app/main/default/objects/Defect__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>(1)User Permissions: if you receive a message related to insufficient privileges, for example. (2)Code Bug: if you receive a untreated error. (3)Functionality: if you understand that something is not working ou working incorrectly.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Permissions</fullName>
            </value>
            <value>
                <fullName>Code Bug</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Incorrect/Missing Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>