force-app/main/default/objects/Defect__c/fields/Cause_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Cause_Analysis__c</fullName>
    <label>Cause Analysis</label>
    <type>TextArea</type>
</CustomField>