force-app/main/default/objects/Defect__c/fields/Change_Set__c.field-meta.xml
<CustomField>
    <fullName>Change_Set__c</fullName>
    <label>Change Set</label>
    <length>25</length>
    <type>Text</type>
</CustomField>