force-app/main/default/objects/Defect__c/fields/Configuration_del__c.field-meta.xml
<CustomField>
    <fullName>Configuration_del__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>CMRs</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Dashboards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>