force-app/main/default/objects/Defect__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Enter defect details.  Attach screen shots as Chatter Files.</inlineHelpText>
    <label>Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>