force-app/main/default/objects/Defect__c/fields/Estimated_Fix_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Fix_Date__c</fullName>
    <formula>IF( ISPICKVAL( Severity__c , &quot;Critical&quot;) , CreatedDate + 0.5 , IF( ISPICKVAL(Severity__c , &quot;High&quot;) , CreatedDate +1 , IF(ISPICKVAL(Severity__c , &quot;Medium&quot;) , CreatedDate + 2, CreatedDate + 3) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Fix Date</label>
    <type>DateTime</type>
</CustomField>