force-app/main/default/objects/Defect__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &apos;New&apos;),IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 20), 
					IF( ISPICKVAL(Status__c, &apos;In Progress&apos;),IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 20, 20),
						IF( ISPICKVAL(Status__c, &apos;Ready to Test&apos;),IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 20),&apos;&apos;)
					)
				
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fase</label>
    <type>Text</type>
</CustomField>