force-app/main/default/objects/Defect__c/fields/Record_Imformation__c.field-meta.xml
<CustomField>
    <fullName>Record_Imformation__c</fullName>
    <description>To help IT to find the issue</description>
    <inlineHelpText>Lead name, account name, Opportunity id, or BBR number and so on to help IT to find the issue</inlineHelpText>
    <label>Record Information</label>
    <length>20</length>
    <type>Text</type>
</CustomField>