force-app/main/default/objects/Defect__c/fields/Related_Defect__c.field-meta.xml
<CustomField>
    <fullName>Related_Defect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Defect</label>
    <referenceTo>Defect__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>