force-app/main/default/objects/Defect__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Solution</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>