force-app/main/default/objects/Defect__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <color>#FF0000</color>
                <label>Critical</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#FFFF66</color>
                <default>true</default>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#FFCC33</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#66FF99</color>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>