force-app/main/default/objects/Defect__c/fields/Sistema__c.field-meta.xml
<CustomField>
    <fullName>Sistema__c</fullName>
    <label>Sistema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>