force-app/main/default/objects/Defect__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <formula>Work__r.Sprint__r.Name</formula>
    <label>Sprint</label>
    <type>Text</type>
</CustomField>