force-app/main/default/objects/Defect__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#A845DC</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Ready to Test</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
                <color>#33CC00</color>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Melhoria</fullName>
            </value>
            <value>
                <fullName>Erro de procedimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>