force-app/main/default/objects/Defect__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>SHORT description of defect.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>