force-app/main/default/objects/Defect__c/fields/Tempo_da_Solucao__c.field-meta.xml
<CustomField>
    <fullName>Tempo_da_Solucao__c</fullName>
    <description>Tempo da solução em minutos</description>
    <inlineHelpText>Tempo da solução em minutos</inlineHelpText>
    <label>Tempo da Solução</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>