force-app/main/default/objects/Defect__c/fields/Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario__c</fullName>
    <formula>if( ISBLANK( Test_Case__c ), Test_Step__r.Test_Case__r.Test_Scenario__r.Name  ,   Test_Case__r.Test_Scenario__r.Name )</formula>
    <label>Test Scenario</label>
    <type>Text</type>
</CustomField>