force-app/main/default/objects/Defect__c/fields/Test_Step__c.field-meta.xml
<CustomField>
    <fullName>Test_Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Test Step</label>
    <referenceTo>Test_Steps__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>