force-app/main/default/objects/Defect__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work</label>
    <referenceTo>Work__c</referenceTo>
    <relationshipLabel>Incidentes</relationshipLabel>
    <relationshipName>Incidentes</relationshipName>
    <type>Lookup</type>
</CustomField>