force-app/main/default/objects/Defect__c/listViews/Meus_Incidentes.listView-meta.xml
<ListView>
    <fullName>Meus_Incidentes</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Meus Incidentes</label>
</ListView>